--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,5 +1,3 @@
-<div class="jumbotron text-center">
-    <h1>Home Page 4 Life</h1>
-
-    <p>{{ tagline }}</p>
+<div ng-repeat="beer in beers">
+  <h2>{{beer}}</h2>
 </div>
