--- a/public/style/style.css
+++ b/public/style/style.css
@@ -31,4 +31,49 @@ p{
 
 h1{
   margin-bottom: 5%;
+  margin-left: 2%;
+}
+
+.beerReview{
+  margin: 1% 0 1% 2%;
+  padding-top: 1%;
+
+}
+
+.beerReview span{
+  margin-left:5%;
+}
+
+.beerReview b{
+  font-size: 1.2em;
+}
+
+.even{
+  background-color: #E8E8E8;
+}
+.reviews, .addReview{
+  margin-top: 2%;
+  border-top: 2px solid #E8E8E8;
+}
+
+form{
+  margin-left: 5%;
+  margin-bottom: 5%;
+}
+
+label{
+  margin-right: 2%;
+  margin-bottom:2%;
+}
+
+input, textarea{
+  margin-bottom: 2%;
+}
+
+button{
+  background-color: #a8a8a8;
+}
+
+select{
+  margin-bottom: 5%;
 }
