--- a/public/views/beer.html
+++ b/public/views/beer.html
@@ -13,13 +13,46 @@
     </div>
   </div>
 </div>
-<div class="container">
+<div class="container reviews">
   <div class="col-lg-12 col-md-12">
-    <div class="reviews">
-      <div class="col-lg-3 col-md-3">
         <h2>Reviews</h2>
+        <div ng-repeat="review in reviews" ng-class-even="'even'">
+          <div class="beerReview">
+            <div class="row">
+                <div class="col-lg-2 col-md-2">
+                  <b>{{review.name}}:</b>
+                </br>
+                  <span>{{review.rating}}/10</span>
+                </div>
+                <div class="col-lg-10 col-md-10">
+                  <p>
+                    <b>{{review.subject}}</b>
+                    </br>
+                    {{review.description}}
+                  </p>
+                </div>
+            </div>
+          </div>
       </div>
-      </div>
-    </div>
+  </div>
+</div>
+<div class="container addReview">
+  <div class="col-lg-12 col-md-12">
+    <h2>Voeg eigen Review toe</h2>
+      <form ng-submit="addReview()">
+        <div class="form-group">
+            <label for="subject">Onderwerp:</label>
+            <input class="form-control" type="text" ng-model="subject"></input>
+            <label for="description">Review:</label>
+            <textarea class="form-control" rows="5" type="text" ng-model="description"></textarea>
+            <label for="repeatSelect"> Kies Rating: </label>
+            <select name="repeatSelect" id="repeatSelect" ng-model="data.model">
+              <option value="">---Kies een rating---</option>
+              <option ng-repeat="rating in data.ratings" value="{{rating.id}}">{{rating.name}}</option>
+            </select>
+          </br>
+            <button type="submit" class="btn btn-secondary">Voeg toe</button>
+          </div>
+      </form>
   </div>
 </div>
