--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,6 @@
 <div ng-repeat="beer in beers">
   <div class="beerView">
-      <a href="#/beer/{{$index}}">
+      <a href="#/beer/{{beer._id}}">
     <div class="row">
       <div class="col-lg-12 col-md-12">
         <div class="col-lg-2 col-md-2">
