database online gezet

--- a/public/views/beer.html
+++ b/public/views/beer.html
@@ -1,4 +1,4 @@
-<div class="container">
+
   <div class="col-lg-12 col-md-12">
     <div class="beerViewer">
       <div class="col-lg-3 col-md-3">
@@ -12,8 +12,8 @@
       </div>
     </div>
   </div>
-</div>
-<div class="container reviews">
+
+<div class="reviews">
   <div class="col-lg-12 col-md-12">
         <h2>Reviews</h2>
         <div ng-repeat="review in reviews" ng-class-even="'even'">
@@ -36,7 +36,7 @@
       </div>
   </div>
 </div>
-<div class="container addReview">
+<div class="addReview">
   <div class="col-lg-12 col-md-12">
     <h2>Voeg eigen Review</h2>
       <form ng-submit="addReview()">
