--- a/public/views/beer.html
+++ b/public/views/beer.html
@@ -1,13 +1,13 @@
-
-  <div class="col-lg-12 col-md-12">
-    <div class="beerViewer">
+  <div class="beerViewer">
+    <div class="col-lg-12 col-md-12">
       <div class="col-lg-3 col-md-3">
         <img src="{{beer.image}}" />
       </div>
       <div class="col-lg-9 col-md-9">
-        <h2>{{beer.name}}</h2>
-        <span>{{beer.brewery}}</span>
-        <h3>Description:</h3>
+        <h3>{{beer.name}}</h3>
+        <h3>Brouwerij:</h3>
+        <p>{{beer.brewery}}</p>
+        <h3>Beschrijving:</h3>
         <p>{{beer.description}}</p>
       </div>
     </div>
@@ -36,7 +36,7 @@
       </div>
   </div>
 </div>
-<div class="addReview">
+<div ng-show="isLoggedIn()" class="addReview">
   <div class="col-lg-12 col-md-12">
     <h2>Voeg eigen Review</h2>
       <form ng-submit="addReview()">
